2010-06-18 Roman
- DAQ.OPC_UA: Data acquisition errors processing and connection restore timeout is added into controller.


2010-06-16 Roman
- DAQ.OPC_UA: Root node insert for return into browser for nodes without parent nodes.
    NodesId encoding for symbols '(' and ')' is added to browser for bad NodesId browse fix.
- SYS: Symbols '.' and ',' shielding is added to function strEncode() for oscdID method.


2010-06-13 Roman
- FIX:DAQ.OPC_UA: Full sized numberic NodeId identifier is fixed.
- !!:DAQ.OPC_UA: NodeId expanded for Guid and Opaque (ByteString) support.
    The nodes browser is expanded for errors correct processing.


2010-06-10 Roman
- FIX:SYS: The function TSYS::strParse() is fixed for multiply separators offset position.
- FIX:DAQ.JavaLikeCalc: Line count is fixed for commented blocks by /* */.
- !!:Protocol.HTTP: Outgoing protocol's function is added.
- FIX:Protocol.HTTP, UI.WebCfg, UI.WebCfgD, UI.WebUser, UI.Vision: HTTP-parameter's "Content-Type" value is fixed for item "Charset".


2010-05-28 Roman 0.6.4.2
- SYS: Splash image is updated.
- !!!!:DOC: OpenSCADA manual documents, TODO and API document is updated for 0.6.4.2.
- !!:SYS: The source tree version is changed to 0.6.4.2. RPM-build speck files is changed for build version 0.6.4.2 packages.
- DemoDB: Demo DB is updated for UI.Vision panels replacement.
- !!:Archive.FSArch: Documents and translations is updated and released version 1.4.0.
- !!:Archive.DBArch: Documents and translations is updated and released version 0.9.1.
- !!:DAQ.BlockCalc: Documents and translations is updated and released version 1.3.1.
- !!:DAQ.DCON: Documents and translations is updated and released version 0.3.2.
- !!:DAQ.ICP_DAS: Documents and translations is updated and released version 0.7.1.
- !!:DAQ.JavaLikeCalc: Documents and translations is updated and released version 1.7.0.
- !!:DAQ.LogicLev: Documents and translations is updated and released version 1.1.1.